# browser-scraper-pool

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  test.yml
docs/: docker.md  troubleshooting.md
examples/: README.md
examples/basics/: python_client.py  simple_scrape.py
examples/docker/: README.md  production.yml  standalone.yml  with_client.yml
examples/proxy/: proxy_auth_cdp.py  proxy_rotation.py
src/browser_scraper_pool/: __init__.py  config.py  main.py  worker.py
src/browser_scraper_pool/api/: __init__.py  contexts.py  dependencies.py  jobs.py  pool.py  scrape.py
src/browser_scraper_pool/models/: __init__.py  schemas.py
src/browser_scraper_pool/pool/: __init__.py  browser_pool.py  context_pool.py  eviction.py  rate_limiter.py  request_queue.py
src/browser_scraper_pool/queue/: __init__.py  consumer.py  job_storage.py  publisher.py
tests/: __init__.py  conftest.py  test_api.py  test_api_integration.py  test_browser_pool.py  test_browser_pool_integration.py  test_context_pool.py  test_context_pool_integration.py  test_eviction.py  test_job_storage.py  test_jobs_api.py  test_rate_limiter.py  test_request_queue.py  test_scrape_api.py
