[project]
name = "browser-scraper-pool"
version = "0.1.0"
description = "Web scraping browser pool service using Patchright + FastAPI + RabbitMQ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "patchright>=1.56.0",
    "aio-pika>=9.0.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_scraper_pool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
