[project]
name = "browser-scraper-pool"
version = "0.1.0"
description = "Web scraping browser pool service using Patchright + FastAPI + RabbitMQ"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "patchright>=1.56.0",
    "aio-pika>=9.0.0",
    "pydantic-settings>=2.0",
    "pyvirtualdisplay>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_scraper_pool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins (don't shadow builtins)
    "DTZ",    # flake8-datetimez (timezone-aware datetimes)
    "T10",    # flake8-debugger (no debugger statements)
    "EM",     # flake8-errmsg (error message formatting)
    "ISC",    # flake8-implicit-str-concat
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie (misc lints)
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SLF",    # flake8-self (private member access)
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "TRY",    # tryceratops (exception handling)
    "PERF",   # perflint (performance)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "B008",     # function calls in defaults (FastAPI Depends)
    "S101",     # assert usage (ok in tests)
    "PLR2004",  # magic values (too noisy)
    "PLR0913",  # too many arguments (sometimes needed)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert is fine in tests
    "ARG",     # unused args ok in fixtures
    "SLF001",  # private member access ok in tests
    "EM101",   # string literals in exceptions ok for testing error messages
    "TRY003",  # long exception messages ok in tests
    "B017",    # blind exception catching ok when testing external libs
    "PT011",   # broad exception ok when exception type varies
]

[tool.ruff.lint.isort]
known-first-party = ["browser_scraper_pool"]

[tool.ruff.lint.pylint]
max-args = 7
